// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should handle no middlewares 1`] = `
{
  "$schema": "https://json-schema.org/draft-2020-12/schema",
  "properties": {
    "four": {
      "type": "boolean",
    },
  },
  "required": [
    "four",
  ],
  "type": "object",
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge input object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft-2020-12/schema",
  "allOf": [
    {
      "allOf": [
        {
          "allOf": [
            {
              "properties": {
                "one": {
                  "type": "string",
                },
              },
              "required": [
                "one",
              ],
              "type": "object",
            },
            {
              "properties": {
                "two": {
                  "type": "number",
                },
              },
              "required": [
                "two",
              ],
              "type": "object",
            },
          ],
        },
        {
          "properties": {
            "three": {
              "type": "null",
            },
          },
          "required": [
            "three",
          ],
          "type": "object",
        },
      ],
    },
    {
      "properties": {
        "four": {
          "type": "boolean",
        },
      },
      "required": [
        "four",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge intersection object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft-2020-12/schema",
  "allOf": [
    {
      "allOf": [
        {
          "allOf": [
            {
              "properties": {
                "one": {
                  "type": "string",
                },
              },
              "required": [
                "one",
              ],
              "type": "object",
            },
            {
              "properties": {
                "two": {
                  "type": "number",
                },
              },
              "required": [
                "two",
              ],
              "type": "object",
            },
          ],
        },
        {
          "allOf": [
            {
              "properties": {
                "three": {
                  "type": "null",
                },
              },
              "required": [
                "three",
              ],
              "type": "object",
            },
            {
              "properties": {
                "four": {
                  "type": "boolean",
                },
              },
              "required": [
                "four",
              ],
              "type": "object",
            },
          ],
        },
      ],
    },
    {
      "allOf": [
        {
          "properties": {
            "five": {
              "type": "string",
            },
          },
          "required": [
            "five",
          ],
          "type": "object",
        },
        {
          "properties": {
            "six": {
              "type": "number",
            },
          },
          "required": [
            "six",
          ],
          "type": "object",
        },
      ],
    },
  ],
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge mixed object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft-2020-12/schema",
  "allOf": [
    {
      "allOf": [
        {
          "allOf": [
            {
              "properties": {
                "one": {
                  "type": "string",
                },
              },
              "required": [
                "one",
              ],
              "type": "object",
            },
            {
              "properties": {
                "two": {
                  "type": "number",
                },
              },
              "required": [
                "two",
              ],
              "type": "object",
            },
          ],
        },
        {
          "anyOf": [
            {
              "properties": {
                "three": {
                  "type": "null",
                },
              },
              "required": [
                "three",
              ],
              "type": "object",
            },
            {
              "properties": {
                "four": {
                  "type": "boolean",
                },
              },
              "required": [
                "four",
              ],
              "type": "object",
            },
          ],
        },
      ],
    },
    {
      "properties": {
        "five": {
          "type": "string",
        },
      },
      "required": [
        "five",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge union object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft-2020-12/schema",
  "allOf": [
    {
      "allOf": [
        {
          "anyOf": [
            {
              "properties": {
                "one": {
                  "type": "string",
                },
              },
              "required": [
                "one",
              ],
              "type": "object",
            },
            {
              "properties": {
                "two": {
                  "type": "number",
                },
              },
              "required": [
                "two",
              ],
              "type": "object",
            },
          ],
        },
        {
          "anyOf": [
            {
              "properties": {
                "three": {
                  "type": "null",
                },
              },
              "required": [
                "three",
              ],
              "type": "object",
            },
            {
              "properties": {
                "four": {
                  "type": "boolean",
                },
              },
              "required": [
                "four",
              ],
              "type": "object",
            },
          ],
        },
      ],
    },
    {
      "anyOf": [
        {
          "properties": {
            "five": {
              "type": "string",
            },
          },
          "required": [
            "five",
          ],
          "type": "object",
        },
        {
          "properties": {
            "six": {
              "type": "number",
            },
          },
          "required": [
            "six",
          ],
          "type": "object",
        },
      ],
    },
  ],
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Zod Issue #600: can not intersect object schema with passthrough and transformation 1`] = `
Error({
  "message": "Unmergable intersection. Error path: ["id"]",
})
`;
